<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/second_color">

    <TextView
        android:id="@+id/challengeArreadyMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/roboto_light"
        android:text="@string/challengeAlreadyDescription"
        android:textColor="@color/text_description_thin"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/challengeVsX"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageChallenger"
        app:layout_constraintBottom_toBottomOf="@+id/imageChallenger"
        android:text="@string/challengeVsX"
        android:textColor="@color/text_focus_regular"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_regular"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageChallenger"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toStartOf="@id/challengeVsX"
        app:layout_constraintTop_toBottomOf="@id/challengeArreadyMessage"
        android:contentDescription="@string/challengeImageChallengerDescription"
        app:civ_border_width="0.7dp"
        app:civ_border_color="@color/text_description_thin"
        app:srcCompat="@drawable/profile_image1" />

    <TextView
        android:id="@+id/challengerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageChallenger"
        app:layout_constraintStart_toStartOf="@+id/imageChallenger"
        app:layout_constraintTop_toBottomOf="@+id/imageChallenger"
        android:text="@string/challengeDefaultChallenger"
        android:textAlignment="center"
        android:textColor="@color/text_focus_thin"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageChallenged"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toEndOf="@id/challengeVsX"
        app:layout_constraintTop_toTopOf="@id/imageChallenger"
        android:contentDescription="@string/challengeImageChallengedDescription"
        app:civ_border_width="0.7dp"
        app:civ_border_color="@color/text_description_thin"
        app:srcCompat="@drawable/profile_image1" />

    <TextView
        android:id="@+id/challengedName"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageChallenged"
        app:layout_constraintStart_toStartOf="@+id/imageChallenged"
        app:layout_constraintTop_toBottomOf="@+id/imageChallenged"
        android:text="@string/challengeDefaultChallenged"
        android:textAlignment="center"
        android:textColor="@color/text_focus_thin"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light" />

    <TextView
        android:id="@+id/challengeBestOf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challengerName"
        android:text="@string/challengeBestOf"
        android:textAlignment="center"
        android:textColor="@color/text_description_thin"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_light"
        android:textAllCaps="true" />

    <co.ceryle.radiorealbutton.RadioRealButtonGroup
        android:id="@+id/buttonGroup"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challengeBestOf"
        app:rrbg_animate="true"
        app:rrbg_animateSelector="2"
        app:rrbg_animateSelector_duration="100"
        app:rrbg_backgroundColor="@android:color/transparent"
        app:rrbg_dividerColor="@android:color/transparent"
        app:rrbg_selectorColor="@color/red"
        app:rrbg_selectorSize="2dp"
        app:rrbg_selectorFullSize="false">

        <co.ceryle.radiorealbutton.RadioRealButton
            android:id="@+id/buttonOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_checked="false"
            app:rrb_text="1"
            app:rrb_textColor="@color/text_focus_regular"
            app:rrb_textSize="16sp"/>

        <co.ceryle.radiorealbutton.RadioRealButton
            android:id="@+id/buttonThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_checked="false"
            app:rrb_text="3"
            app:rrb_textColor="@color/text_focus_regular"
            app:rrb_textSize="16sp"/>

        <co.ceryle.radiorealbutton.RadioRealButton
            android:id="@+id/buttonFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_checked="false"
            app:rrb_text="5"
            app:rrb_textColor="@color/text_focus_regular"
            app:rrb_textSize="16sp"/>

        <co.ceryle.radiorealbutton.RadioRealButton
            android:id="@+id/buttonWO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_checked="false"
            app:rrb_text="WO"
            app:rrb_textColor="@color/text_focus_regular"
            app:rrb_textSize="16sp"/>
    </co.ceryle.radiorealbutton.RadioRealButtonGroup>

</android.support.constraint.ConstraintLayout>
