...
        android:textColor="@color/text_description_thin"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:fontFamily="@font/roboto_light" />

    <co.ceryle.radiorealbutton.RadioRealButtonGroup
        android:id="@+id/buttonGroupWO"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
...
        app:rrbg_selectorFullSize="true"
        app:rrbg_selectorRadius="19dp"
        app:rrbg_borderSize="1dp"
        app:rrbg_borderColor="@color/red">

        <co.ceryle.radiorealbutton.RadioRealButton
            android:id="@+id/buttonChallenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_text="@string/challengeWOSelectChallenger"
            app:rrb_textColor="@color/text_focus_regular"
            app:rrb_textSize="12sp"/>

...
