...
    android:layout_height="match_parent"
    android:background="#393939"
    tools:context="com.nexte.nexte.MainActivity">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/challengeRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
...
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="#2d2d2d"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/sendChallengeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challengeRecyclerView"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="horizontal">
...
